# cgpt

./: .env.example  .gitignore  Cargo.toml  package-lock.json  package.json  serverless.yml
api/: Cargo.toml  docker-compose.dev.yml  package.json
api/src/: lib.rs  main.rs  openai.rs  util.rs
api/src/handlers/: chat.rs
api/src/services/: app_state.rs  chat.rs  mod.rs
app/: .proxyrc.json  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
app/src/: App.css  App.tsx  api.ts
cli/: Cargo.toml
src/: main.rs
