[package]
name = "cgpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
surrealdb = { version = "1.0.0-beta.9", features = ["kv-rocksdb"] }
tokio = { version = "1.29.1", features = ["full"] }
