[package]
name = "cgpt-api"
version = "0.1.0"
edition = "2021"
authors = ["Aslam Ahammed A <aslamplr@gmail.com>"]
license = "MIT"

[dependencies]
anyhow = "1.0.71"
async-openai = "0.12.1"
axum = "0.6.18"
dotenv = "0.15.0"
lambda_http = { version = "0.8.1", optional = true }
rand = "0.8.5"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
surrealdb = { version = "1.0.0-beta.9" }
tokio = { version = "1.29.1", features = ["full"] }
tower = { version = "0.4.13", optional = true }
tower-http = { version = "0.4.1", features = ["trace", "cors", "compression-gzip", "compression-deflate"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[features]
default = []
lambda = ["lambda_http", "tower"]
