[package]
name = "cgpt-cli"
version = "0.1.0"
edition = "2021"
authors = ["Aslam Ahammed A <aslamplr@gmail.com>"]
license = "MIT"

[dependencies]
anyhow = "1.0.71"
async-openai = "0.12.1"
dirs = "5.0.1"
dotenv = "0.15.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
surrealdb = { version = "1.0.0-beta.9", features = ["kv-rocksdb"] }
tokio = { version = "1.29.1", features = ["full"] }
toml = "0.7.5"
